--- a/nested_sequence/text_classification/index.html
+++ b/nested_sequence/text_classification/index.html
@@ -102,7 +102,10 @@ prob = paddle.layer.mixed(size=class_num,
                                      input=[paddle.layer.full_matrix_projection(input=avg_pool)],
                                        act=paddle.activation.Softmax())
 ```
-
+## 安装依赖包
+```bash
+pip install -r requirements.txt
+```
 
 ## 使用 PaddlePaddle 内置数据运行
 
