--- a/neural_seq_qa/index.html
+++ b/neural_seq_qa/index.html
@@ -87,7 +87,7 @@ PYTHONPATH=data/evaluation:$PYTHONPATH python train.py 2>&1 | tee train.log
 ```
 # Validation and Test
 
-WebQA provoides two versions of validation and test sets.  Automatic valiation and test can be lauched by
+WebQA provides two versions of validation and test sets.  Automatic validation and test can be lauched by
 
 ```bash
 PYTHONPATH=data/evaluation:$PYTHONPATH python val_and_test.py models [ann|ir]
